[0.2.12] Fixed sidebar responsive and visual bugs on small screens

--- a/styles/header.css
+++ b/styles/header.css
@@ -11,7 +11,7 @@ header {
 
 .logo {
     display: flex;
-    margin: 0 10px 0 70px;
+    margin: 0 10px 0 20px;
     padding: 5px 0;
     box-sizing: border-box;
 }
@@ -33,4 +33,18 @@ header {
     display: none;
     font-size: 14px;
     margin: 0 50px 0 10px;
+}
+
+
+@media screen and (max-width: 1023px){
+    .logo{
+        margin: 0 10px 0 70px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    #exchange-rates {
+        display: none;
+        /* also exchange rates dont loading by main.js */
+    }
 }
